2012-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/CMakeLists.txt: Remove configuration no longer necessary for
	out-of-source builds.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 3.4+beta2.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.4+beta1 release.

	* CHANGES: Updated.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Update CPACK_SOURCE_IGNORE_FILES.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Update instructions to use out-of-source building, remove
	outdated information.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Update "doc" and "doc-full" targets for out-of-source builds.

	* doc/CMakeLists.txt: Update commands and targets to work with
	out-of-source builds.

	* doc/Doxyfile.in: Updated to work with out-of-source builds.

	* doc/Doxyfile_full.in: Harmonized with Doxyfile.in.

2012-10-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c (hash_link_destroy): Closed memleak.

2012-10-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c (hash_add): Closed memleak. Thanks to Felix
	Wolfsteller for spotting.

2012-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Updated for upcoming release.

2012-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Prepared for soon release of first 3.4 beta.

2012-10-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_init): Removed the
	cleverness feature to enable ACT_SETTINGS that were explicitely
	disabled. This behaviour is too clever for its own good.
	This means that clients can not rely on this behaviour anymore
	and must select the NVTs with corresponding care from now on.

2012-10-01  Michael Wiegand <michael.wiegand@greenbone.net>
